--- a/app/css/reveal.css
+++ b/app/css/reveal.css
@@ -42,6 +42,13 @@ body {
     -webkit-transform: scale(1.3);
             transform: scale(1.3); }
 
+.reveal .slides section .fragment.grow-less {
+  opacity: 1;
+  visibility: inherit; }
+  .reveal .slides section .fragment.grow-less.visible {
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3); }
+
 .reveal .slides section .fragment.shrink {
   opacity: 1;
   visibility: inherit; }
@@ -128,7 +135,9 @@ body {
 .reveal .slides section .fragment.highlight-green,
 .reveal .slides section .fragment.highlight-current-green,
 .reveal .slides section .fragment.highlight-blue,
-.reveal .slides section .fragment.highlight-current-blue {
+.reveal .slides section .fragment.highlight-current-blue,
+.reveal .slides section .fragment.highlight-yellow-frag,
+.reveal .slides section .fragment.highlight-current-yellow-frag {
   opacity: 1;
   visibility: inherit; }
 
@@ -141,6 +150,9 @@ body {
 .reveal .slides section .fragment.highlight-blue.visible {
   color: #1b91ff; }
 
+.reveal .slides section .fragment.highlight-yellow-frag.visible {
+  color: #F7EA48; }
+
 .reveal .slides section .fragment.highlight-current-red.current-fragment {
   color: #ff2c2d; }
 
@@ -149,6 +161,9 @@ body {
 
 .reveal .slides section .fragment.highlight-current-blue.current-fragment {
   color: #1b91ff; }
+
+.reveal .slides section .fragment.highlight-current-yellow-frag.current-fragment {
+  color: #F7EA48; }
 
 /*********************************************
  * DEFAULT ELEMENT STYLES
