--- a/app/css/reveal.scss
+++ b/app/css/reveal.scss
@@ -55,6 +55,15 @@ body {
 	}
 }
 
+// .reveal .slides section .fragment.grow-less {
+// 	opacity: 1;
+// 	visibility: inherit;
+//
+// 	&.visible {
+// 		transform: scale( 1.3 );
+// 	}
+// }
+
 .reveal .slides section .fragment.shrink {
 	opacity: 1;
 	visibility: inherit;
@@ -164,7 +173,9 @@ body {
 .reveal .slides section .fragment.highlight-green,
 .reveal .slides section .fragment.highlight-current-green,
 .reveal .slides section .fragment.highlight-blue,
-.reveal .slides section .fragment.highlight-current-blue {
+.reveal .slides section .fragment.highlight-current-blue
+.reveal .slides section .fragment.highlight-yellow-frag,
+.reveal .slides section .fragment.highlight-current-yellow-frag {
 	opacity: 1;
 	visibility: inherit;
 }
@@ -177,6 +188,9 @@ body {
 	.reveal .slides section .fragment.highlight-blue.visible {
 		color: #1b91ff;
 	}
+	.reveal .slides section .fragment.highlight-yellow-frag.visible {
+		color: #F7EA48;
+	}
 
 .reveal .slides section .fragment.highlight-current-red.current-fragment {
 	color: #ff2c2d
@@ -186,6 +200,9 @@ body {
 }
 .reveal .slides section .fragment.highlight-current-blue.current-fragment {
 	color: #1b91ff;
+}
+.reveal .slides section .fragment.highlight-current-yellow-frag.current-fragment {
+	color: #F7EA48;
 }
 
 
