--- a/app/css/theme/hop.css
+++ b/app/css/theme/hop.css
@@ -85,7 +85,7 @@ body {
 .reveal h6 {
   position: absolute;
   top: 93%;
-  font-size: 0.25em;
+  font-size: 0.3em;
   text-align: left;
   vertical-align: bottom;
 }
@@ -339,6 +339,26 @@ body {
    /* margin-top: 5%; */
    /* margin-bottom: 5%; */
    margin-left: 5%;
+   /* margin-right: auto; */
+   padding-left: 2%;
+   padding-right: 2%;
+   padding-top: 1%;
+   padding-bottom: 1%;
+   font-size: .8em;
+   display: block;
+   /* align-items: center; */
+   /* text-align: center; */
+ }
+
+ .reveal .box-theory {
+   position: relative;
+   border: 3px solid #002D72;
+   left: 80%;
+   width: 10.5em;
+   line-height: 1.5em;
+   /* margin-top: 5%; */
+   /* margin-bottom: 5%; */
+   margin-left: 7%;
    /* margin-right: auto; */
    padding-left: 2%;
    padding-right: 2%;
@@ -643,6 +663,10 @@ body {
 
   .bayes-equals-sign {
     color: inherit;
+  }
+
+  div.ct {
+    margin-left: 20%;
   }
 
   /*
