--- a/app/css/theme/hop.css
+++ b/app/css/theme/hop.css
@@ -84,8 +84,8 @@ body {
 
 .reveal h6 {
   position: absolute;
-  top: 93%;
-  font-size: 0.3em;
+  top: 91.45%;
+  font-size: 0.4em;
   text-align: left;
   vertical-align: bottom;
 }
@@ -140,6 +140,11 @@ body {
   display: block;
   margin-left: 40px; }
 
+/* I added this 2020-04-09 */
+.reveal li {
+
+}
+
 .reveal dt {
   font-weight: bold; }
 
@@ -152,7 +157,7 @@ body {
   width: 70%;
   margin: 20px auto;
   padding: 5px;
-  font-style: italic;
+  font-style: arial;
   background: rgba(255, 255, 255, 0.05);
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }
 
@@ -414,13 +419,16 @@ body {
    float: left;
    bottom: 3%;
    position: absolute;
-   height: 2%;
+   height: 3%;
    width: 100%;
    background: #002D72;
+   font-size: .33em;
  }
  /*********************************************
   * SUNDRY
   *********************************************/
+
+  /* This needs to be organized. */
   div.inSlide {
     position: absolute;
     top: 25%;
@@ -689,6 +697,18 @@ body {
     margin-left: 20%;
   }
 
+  .asclepius {
+    color: inherit;
+    fill: inherit;
+    stroke-width: 0;
+    position: absolute;
+    right: 3%;
+    top: 25%;
+  }
+
+  .reveal li.de-emphasize {
+    font-size: 80%;
+  }
   /*
   svg {
     color: currentColor;
