--- a/app/css/theme/hop.css
+++ b/app/css/theme/hop.css
@@ -262,7 +262,7 @@ body {
 .reveal section img {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
-  border: 4px solid #fff;
+  border: 2px solid #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
 
 .reveal section img.plain {
@@ -518,8 +518,6 @@ body {
     position: absolute;
     text-align: left;
     font-size: .67em;
-    /* position: relative; */
-    /* display: inline-block; */
   }
 
   .par-left-down {
@@ -532,22 +530,29 @@ body {
     /* display: inline-block; */
   }
 
+  .par-left-down-two {
+    position: absolute;
+    bottom: 10%;
+    left: 1%;
+    text-align: left;
+    font-size: .67em;
+    /* position: relative; */
+    /* display: inline-block; */
+  }
+
   .par-right-down {
     position: absolute;
     top: 70%;
     right: 10%;
     text-align: right;
     font-size: .67em;
-    /* position: relative; */
-    /* display: inline-block; */
+
   }
 
   .par-right {
     position: relative;
     text-align: right;
     font-size: .67em;
-    /* position: relative; */
-    /* display: inline-block; */
     }
 
   .reveal #header-name {
