--- a/app/css/theme/hop.css
+++ b/app/css/theme/hop.css
@@ -36,7 +36,9 @@ body {
 .reveal .slides section,
 .reveal .slides section > section {
   line-height: 1.3;
-  font-weight: inherit; }
+  font-weight: inherit;
+  /* Set height for as ?print-pdf work-around  */
+  height: 700px; }
 
 /*********************************************
  * HEADERS
